topic training implemented

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -55,3 +55,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+parsers.text.maxLength=1024M
+jvm.memory="-Xmx1536M -Xms128M"
