similarity searching now filters by topic_model_id. most "magic" numbers are now configuration items

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,5 +56,24 @@ logger.play=INFO
 logger.application=DEBUG
 
 parsers.text.maxLength=1024M
-#jvm.memory="-Xmx61440M -Xms2048M"
-jvm.memory="-Xmx2048M -Xms512M"
+jvm.memory="-Xmx16384M -Xms2048M"
+#jvm.memory="-Xmx2048M -Xms512M"
+
+# Pancake Smarts
+smarts.diffbot.licenseKey="xxx"
+smarts.diffbot.timeout=10000
+
+smarts.topicModel.numThreads=4
+smarts.topicModel.numIterations=1000
+smarts.topicModel.optimizeIntervals=100
+smarts.topicModel.burnInPeriod=10
+smarts.topicModel.symmetricAlpha=false
+smarts.topicModel.numTopWords=40
+
+smarts.inference.numIterations=1000
+smarts.inference.burnInPeriod=10
+smarts.inference.numSignificantFeatures=5
+smarts.inference.thinning=10
+smarts.inference.threshold="0.0"
+
+smarts.lsh.numBits=50
